# news-summarizer

./: .env.template  .gitignore  .pre-commit-config.yaml  INSTALL.md  LICENSE  README.md  bootstrap.sh  docker-compose.yml  pyproject.toml  txt
.github/workflows/: pull_request.yml
configs/: crawl_links.yml
notebooks/: 1.webdriver.ipynb  2.crawler.ipynb  3.database.ipynb  4.executor.ipynb  5.scraper.ipynb  6.preprocessor.ipynb  7.summarizer_dataset.ipynb  generator.ipynb  predictions.ipynb  sft.ipynb
orchestrator/: COMMAND.md  __init__.py  __main__.py
orchestrator/decorators/: __init__.py  _base.py
orchestrator/pipelines/: __init__.py  article_extraction.py  article_scrap.py  data_fetching.py  data_indexing.py  data_ingestion.py  dataset_generation.py  document_processing.py  generate_dataset.py  link_extraction.py  links_cleaner.py  links_crawl.py  newspaper_crawl.py  sanitize_links.py
orchestrator/steps/: __init__.py  craw_links.py
orchestrator/steps/data_indexing/: __init__.py  chunk_and_embed.py  clean_documents.py  load_documents.py  store_vectors.py
orchestrator/steps/datasets/: __init__.py  convert.py  data_loader.py  dataset_generator.py  documents.py  generate.py  huggingface_uploader.py
orchestrator/steps/documents/: chunk_and_embed.py  clean_documents.py  load_documents.py  store_vectors.py
orchestrator/steps/etl/: clean_articles.py  clean_links.py  crawl_links.py  scrap_articles.py  scrap_links.py
orchestrator/steps/extraction/: __init__.py  crawl_links.py  deduplication.py  scrape_content.py
orchestrator/steps/generate_datasets/: __init__.py  create_prompt.py  load_documents.py
orchestrator/steps/processing/: __init__.py  document_loader.py  document_store.py  text_cleaner.py  vectorizer.py
src/news_summarizer/config/: __init__.py  _base.py
src/news_summarizer/crawler/: __init__.py  base.py  crawler_registry.py  executor.py  newspaper_website.py  registry.py
src/news_summarizer/database/: mongo.py  qdrant.py
src/news_summarizer/datasets/: __init__.py  generation.py
src/news_summarizer/domain/: __init__.py  chunks.py  clean_documents.py  dataset.py  documents.py  embedded_chunks.py  prompt.py
src/news_summarizer/embeddings/: __init__.py  base.py  embeddings.py
src/news_summarizer/preprocessing/: __init__.py  chunk.py  text.py
src/news_summarizer/scraper/: __init__.py  article_page.py  base.py  executor.py  registry.py
src/news_summarizer/services/: chunk.py  embed.py
src/news_summarizer/utils/: __init__.py  _base.py
src/news_summarizer/web/: __init__.py  base.py
src/news_summarizer/webdriver/: __init__.py  (+3 more)
tests/integration/: test_mongo.py
(+18 files in other folders)
