[tool.poetry]
name="New Summarizer"
version="0.1.0"
description=""
authors=["Maike Reis <maikerdralcantara@gmail.com>"]
packages = [{include = "*", from="src"}]
license="MIT"
readme="README.md"

[tool.poetry.dependencies]
python = ">=3.11.8,<3.13"

# Database
pymongo = "^4.6.2"
pydantic-settings = "^2.6.1"

# Crawler
selenium = "^4.21.0"
beautifulsoup4="^4.12.3"
html2text="^2024.2.26"
langchain-community= "^0.3.8"

# Browser
edgedriver-autoinstaller="^0.2.1"
chromedriver-autoinstaller="^0.6.4"

# Orchestration
zenml = {extras = ["server"], version = "^0.70.0"}
pandas = "^2.2.3"
typer = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pre-commit = "^3.8.0"
pre-commit-hooks = "^5.0.0"
pytest = "^8.2.2"
pytest-cov = "^6.0.0"
